fully working with null settings
fully deploys service.

--- a/src/Cake.Topshelf/Cake.Topshelf.csproj
+++ b/src/Cake.Topshelf/Cake.Topshelf.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Cake.Common">
+      <HintPath>..\..\lib\Cake.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Cake.Core">
       <HintPath>..\packages\Cake.Core.0.1.34\lib\net45\Cake.Core.dll</HintPath>
     </Reference>
@@ -38,7 +41,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TopshelfHelper.cs" />
-    <Compile Include="TopshelfHelperCakeCommonDependent.cs" />
     <Compile Include="TopshelfExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TopshelfSettings.cs" />
